# agg-rust

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  compositing2_cpp_600x400.raw  compositing2_cpp_600x400_alpha050.raw  compositing2_cpp_600x400_srcatop_a050.raw  conv_dash_marker_cpp_500x330.raw  conv_dash_marker_rust_500x330.raw  flash_rasterizer2_cpp_655x520.raw  flash_rasterizer_cpp_655x520.raw  lion_outline_cpp_512x512.raw  package.json  perspective_rust_600x600.raw  perspective_rust_600x600_flipy.raw  run_demo.cmd  test-truetype-demo.ps1
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  fix-test-failures.md  implementer.md  reviewer.md  rust-expert.md  test-writer.md
.claude/skills/fix-test-failures/: SKILL.md
.cursor/commands/: acp.md  fixdemo.md
.github/workflows/: deploy-demo.yml
cpp-references/agg-src/examples/: rasterizers2.cpp
demo/: build-wasm.ps1  build-wasm.sh  build.ts  check-blur.mjs  index.html  package-lock.json  package.json  server.ts  tsconfig.json
demo/public/history/: content-index.json
demo/public/history/fragments/: history_about.html  history_contact.html  history_customers.html  history_demo.html  history_docs.html  history_download.html  history_home.html  history_license.html  history_links.html  history_news.html  history_page_research_adaptive_bezier_index.html.html  history_page_research_bezier_interpolation_index.html.html  history_page_research_flash_rasterizer_index.html.html  history_page_research_font_rasterization_index.html.html  history_page_research_gamma_correction_index.html.html  history_page_tips_gradients_tutorial_gradients_tutorial.agdoc.html.html  history_page_tips_image_plg_image_plg.agdoc.html.html  history_page_tips_line_alignment_line_alignment.agdoc.html.html  history_page_tips_square_color_interpolation_square_color_interpolation.agdoc.html.html  history_page_tips_win_ce_win_ce.agdoc.html.html  history_svg.html  (+6 more)
demo/src/: canvas-controls.ts  main.ts  mouse-helpers.ts  render-canvas.ts  wasm.ts
demo/src/demos/: aa_demo.ts  aa_test.ts  alpha_gradient.ts  alpha_mask.ts  alpha_mask2.ts  alpha_mask3.ts  bezier_div.ts  blend_color.ts  blur.ts  bspline.ts  circles.ts  component_rendering.ts  compositing.ts  compositing2.ts  conv_contour.ts  conv_dash.ts  conv_dash_marker.ts  conv_stroke.ts  curves.ts  distortions.ts  flash_rasterizer.ts  flash_rasterizer2.ts  gamma_correction.ts  gamma_ctrl.ts  gamma_tuner.ts  gouraud.ts  gouraud_mesh.ts  gradient_focal.ts  gradients.ts  graph_test.ts  gsv_text.ts  idea.ts  image1.ts  image_alpha.ts  image_filters.ts  image_filters2.ts  image_fltr_graph.ts  image_perspective.ts  image_resample.ts  image_transforms.ts  (+27 more)
demo/src/legacy/: renderer.ts  sections.ts
demo/styles/: main.css
demo/tests/: aa_demo.drag.test.ts  gradients.drag.test.ts  image_filters.radio.test.ts  line_patterns.drag.test.ts  line_patterns_clip.checkbox.test.ts  lion.controls.test.ts  lion_outline.checkbox.test.ts  lion_outline.controls.test.ts  orient.ts  repro.ts
demo/wasm/: Cargo.toml
demo/wasm/assets/: 1.rgba  2.rgba  3.rgba  4.rgba  5.rgba  6.rgba  7.rgba  8.rgba  9.rgba
demo/wasm/src/: lib.rs  lion_data.rs  render.rs
docs/: BENCHMARKS.md  demo-porting-plan.md  pixel_perfect_check.md
docs/track/: demo-porting-status.md  porting-plan.md
scripts/: pre-commit-check.ps1  pre-commit-check.sh
src/: alpha_mask_u8.rs  arc.rs  array.rs  arrowhead.rs  basics.rs  bezier_arc.rs  blur.rs  bounding_rect.rs  bspline.rs  clip_liang_barsky.rs  color.rs  comp_op.rs  conv_adaptor_vcgen.rs  conv_adaptor_vpgen.rs  conv_contour.rs  conv_curve.rs  conv_dash.rs  conv_marker.rs  conv_segmentator.rs  conv_smooth_poly1.rs  conv_stroke.rs  conv_transform.rs  ctrl.rs  curves.rs  dda_line.rs  ellipse.rs  ellipse_bresenham.rs  embedded_raster_fonts.rs  font_cache.rs  font_engine.rs  gamma.rs  glyph_raster_bin.rs  gradient_lut.rs  gsv_text.rs  image_accessors.rs  image_filters.rs  lib.rs  line_aa_basics.rs  math.rs  math_stroke.rs  (+56 more)
tools/cpp-renderer/: .gitignore  CMakeLists.txt
tools/cpp-renderer/src/: common.h  demo_compositing2.cpp  demo_conv_dash_marker.cpp  demo_flash_rasterizer.cpp  demo_flash_rasterizer2.cpp  demo_image_filters.cpp  demo_image_perspective.cpp  demo_image_transforms.cpp  demo_lion_outline.cpp  demo_perspective.cpp  demo_rasterizers2.cpp  demo_simple_line.cpp  flash_shape.h  main.cpp
tools/pixel-compare/: Cargo.toml
tools/pixel-compare/src/: lib.rs  main.rs
tools/pixel-compare/tests/: conv_dash_marker_reference.rs  image_filters_reference.rs  image_perspective_reference.rs  image_transforms_reference.rs  lion_outline_reference.rs  perspective_reference.rs  rasterizers2_reference.rs  rasterizers2_wasm_native_parity.rs  simple_line_reference.rs
(+17 files in other folders)
