[package]
name = "agg-rust"
version = "1.0.2"
edition = "2021"
rust-version = "1.70"
license = "BSD-3-Clause"
description = "Pure Rust port of Anti-Grain Geometry (AGG) 2.6 - high quality 2D vector graphics rendering"
repository = "https://github.com/larsbrubaker/agg-rust"
homepage = "https://larsbrubaker.github.io/agg-rust/"
documentation = "https://docs.rs/agg-rust"
keywords = ["graphics", "rendering", "anti-aliasing", "2d", "vector"]
categories = ["graphics", "rendering"]
exclude = ["demo/", "docs/", "tests/", ".github/", ".claude/", "benches/", "scripts/", "cpp-references/"]

[workspace]
members = [".", "demo/wasm", "tools/pixel-compare"]

[features]
default = []
font = ["ttf-parser"]

[dependencies]
# Core library has no required external dependencies (matching AGG's zero-dependency philosophy).
# Optional: ttf-parser provides TrueType font support (feature-gated).
ttf-parser = { version = "0.25", optional = true }

[dev-dependencies]
criterion = "0.5"
