[package]
name = "agg-rust"
version = "1.1.0"
edition = "2021"
rust-version = "1.70"
license = "BSD-3-Clause"
description = "Pure Rust port of Anti-Grain Geometry (AGG) 2.6 - high quality 2D vector graphics rendering"
repository = "https://github.com/larsbrubaker/agg-rust"
homepage = "https://larsbrubaker.github.io/agg-rust/"
documentation = "https://docs.rs/agg-rust"
keywords = ["graphics", "rendering", "anti-aliasing", "2d", "vector"]
categories = ["graphics", "rendering"]
exclude = ["demo/", "docs/", "tests/", ".github/", ".claude/", "benches/", "scripts/", "cpp-references/"]

[workspace]
members = [".", "demo/wasm", "tools/pixel-compare"]

[features]
default = []
font = ["ttf-parser"]

[dependencies]
# Core library has no required external dependencies (matching AGG's zero-dependency philosophy).
# Optional: ttf-parser provides TrueType font support (feature-gated).
ttf-parser = { version = "0.25", optional = true }

[dev-dependencies]
criterion = "0.5"

# Header-only C++ AGG compiles as a single fully-inlined translation unit; without
# LTO, agg-rust library calls from other workspace crates (pixel-compare, agg-wasm)
# never inline across the crate boundary. Fat LTO plus a single codegen unit lets the
# optimizer inline across crates and match the C++ inlining model.
# Measured ~14% best-of improvement on rasterizers2 alone (at the cost of longer builds).
[profile.release]
lto = "fat"
codegen-units = 1
